plex/tautulli/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tautulli
  labels:
    app: plex
spec:
  selector:
    matchLabels:
      name: tautulli
  template:
    metadata:
      labels:
        name: tautulli
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: plex-pvc
      containers:
        - name: tautulli
          ports:
            - containerPort: 8181
          image: ghcr.io/k8s-at-home/tautulli
          volumeMounts:
            - mountPath: /config
              name: data
              subPath: tautulli/config
