plex/tautulli/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-lan-tautulli
spec:
  ingressClassName: nginx-lan
  rules:
  - host: tautulli.local
    http:
      paths:
      - backend:
          service:
            name: tautulli
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tautulli.local
